060516 cs  wbl       Attribute ManMode added to Mode class, to avoid code in object graph.
060523 cs  pwrb      New class GetDatap added, to fetch datainputs in template plc.
060630 cs  wbl       Listdescriptor for channellist adapted to V4.x.
060713 rk  rt        Bugfix in classcache for large classes.
060713 rk  init      Volume versioncheck for volref removed if volume is not yet loaded.
060720 rk  init      Try with smaller posix message queue if system does not support big queues.
060830 cs  conv      Attribute changed from enum to mask or v.v. was not converted.
060905 rk  rt_qmon   Wait a while for correct scheduler to be set before starting threads.
060905 rk  rt_tmon   Established new callback function for glibc malloc memory checks.
060905 rk  plc       Wait for all threads to set its priority before changing real and effective user id.
070112 cs  trace     Gtk version of rt_trace. Navigator window inserted in main window.
070116 cs  trace     Mouse Scroll events added.
070124 cs  io        Check at io startup if multiple signals are connected to the same channel.
070124 cs  wbl       Attribute BuildCmd moved/added to Application and PlcProcess.
070130 cs  init      Process rt_webmonelog (web eventlog server) added to startup.
070130 cs  wbl       Attribute LoadArchives added to WebHandler with new type WebLoadArchiveMask.
070417 cs  rt        Bugfix in mvol_ArefToAttribute, an attribute name was returned for attrref refering whole object.
070417 cs  co        Locale set when language is set.
070424 cs  rt        NULL argument for subid in gdh_RefObjectInfo allowed.
070424 cs  wbl       New types Int64 and UInt64.
070424 cs  wbl       New plc classes for Get end CSto of attributes in externvolumes. 
070504 cs  co        Problems with input focus crash for iconified motif windows fixed.
070508 cs  rt        Webservice handling system status requests implemented.