@@ -11,26 +11,66 @@
          <td><b>Module</b></td>
          <td><b>Change</b></td>
          <td><b>Sign</b></td></tr>
+<tr><td>21-MAY-2007</td><td>/.</td>
+<td>Release 4.4.1-1.</td><td>cs</td></tr>
+<tr><td>21-MAY-2007</td><td>xtt/statusmon</td>
+<td>Xtt and operator place can be opened from from status monitor.</td><td>cs</td></tr>
+<tr><td>21-MAY-2007</td><td>src/statussrv</td>
+<td>New soap request to open xtt.</td><td>cs</td></tr>
+<tr><td>16-MAY-2007</td><td>xtt/xtt</td>
+<td>Switch -s in rt_xtt (gtk only): an opplace can be choosen from a list.</td><td>cs</td></tr>
+<tr><td>16-MAY-2007</td><td>src/co</td>
+<td>New Runtime Monitor to start and monitor runtime env on local node.</td><td>cs</td></tr>
+<tr><td>16-MAY-2007</td><td>src/co</td>
+<td>New Status Monitor to supervise status of stations via webservice. </td><td>cs</td></tr>
+<tr><td>16-MAY-2007</td><td>wb/wtt</td>
+<td>New tools menu with Runtime Monitor and Supervision Center (gtk only).</td><td>cs</td></tr>
+<tr><td>10-MAY-2007</td><td>xtt/flow</td>
+<td>Colored rectangles are still colored at inverse drawing.</td><td>cs</td></tr>
+<tr><td>08-MAY-2007</td><td>src/rt</td>
+<td>Webservice handling system status requests implemented.</td><td>cs</td></tr>
+<tr><td>07-MAY-2007</td><td>xtt/ge</td>
+<td>Support for fonts Times, NC Schoolbook and Courier.</td><td>cs</td></tr>
+<tr><td>07-MAY-2007</td><td>xtt/ge</td>
+<td>Problems with national characters in ge text fixed.</td><td>cs</td></tr>
+<tr><td>04-MAY-2007</td><td>src/co</td>
+<td>Problems with input focus crash for iconified motif windows fixed.</td><td>cs</td></tr>
+<tr><td>03-MAY-2007</td><td>xtt/xtt</td>
+<td>Bugfix in command 'open graph /access'.</td><td>cs</td></tr>
+<tr><td>02-MAY-2007</td><td>siemens/mmi</td>
+<td>Added object graphs for classes Siemens_DiagRepeater and Siemens_DR_SegmStatus.</td><td>rk</td></tr>
+<tr><td>01-MAY-2007</td><td>/.</td>
+<td>Release 4.4.0-1.</td><td>cs</td></tr>
+<tr><td>30-APR-2007</td><td>ssabox/rt</td>
+<td>Changed error handling so that sporadic error are allowed  and does not cause system to halt</td><td>rk</td></tr>
+<tr><td>30-APR-2007</td><td>profibus/-</td>
+<td>Changed status handling of Profibus slaves so that correct view of the world is given.</td><td>rk</td></tr>
+<tr><td>26-APR-2007</td><td>siemens/wbl</td>
+<td>New profibus slave classe for Siemens Diagnostic Repeater, pwr_sClass_Siemens_DiagRepeater.</td><td>rk</td></tr>
+<tr><td>26-APR-2007</td><td>profibus/-</td>
+<td>Added gsd-file si0380a7.gsd, for Siemens Diagnostic Repeater.</td><td>rk</td></tr>
 <tr><td>26-APR-2007</td><td>xtt/glow</td>
 <td>Bugfix in imageobject, image was not always freed when graph was closed.</td><td>cs</td></tr>
+<tr><td>26-APR-2007</td><td>siemens/rt</td>
+<td>Added IO-method's for Siemens_DiagRepeater.</td><td>rk</td></tr>
 <tr><td>25-APR-2007</td><td>xtt/ge</td>
 <td>Bit type added in DigColor to view bits in a bitmap.</td><td>cs</td></tr>
 <tr><td>24-APR-2007</td><td>src/wbl</td>
 <td>New plc classes for Get end CSto of attributes in externvolumes. </td><td>cs</td></tr>
 <tr><td>24-APR-2007</td><td>src/wbl</td>
 <td>New types Int64 and UInt64.</td><td>cs</td></tr>
-<tr><td>24-APR-2007</td><td>opc/-</td>
-<td>Opc XML/DA server and client.</td><td>cs</td></tr>
 <tr><td>24-APR-2007</td><td>src/rt</td>
 <td>NULL argument for subid in gdh_RefObjectInfo allowed.</td><td>cs</td></tr>
+<tr><td>24-APR-2007</td><td>opc/-</td>
+<td>Opc XML/DA server and client.</td><td>cs</td></tr>
 <tr><td>19-APR-2007</td><td>wb/wtt</td>
 <td>Script functions GetClassList and GetNextObject added.</td><td>cs</td></tr>
-<tr><td>17-APR-2007</td><td>src/co</td>
-<td>Locale set when language is set.</td><td>cs</td></tr>
 <tr><td>17-APR-2007</td><td>src/rt</td>
 <td>Bugfix in mvol_ArefToAttribute, an attribute name was returned for attrref refering whole object.</td><td>cs</td></tr>
 <tr><td>17-APR-2007</td><td>wb/wtt</td>
 <td>Bugfix in plc connect, attribute reference to an object in a mounted voume had incorrect size. </td><td>cs</td></tr>
+<tr><td>17-APR-2007</td><td>src/co</td>
+<td>Locale set when language is set.</td><td>cs</td></tr>
 <tr><td>02-APR-2007</td><td>xtt/ge</td>
 <td>Dyntype invisible works also for attributes of type Float32.</td><td>cs</td></tr>
 <tr><td>27-MAR-2007</td><td>wb/wb</td>
@@ -51,78 +91,80 @@
 <td>Bugfix in input focus when value input was closed.</td><td>cs</td></tr>
 <tr><td>19-FEB-2007</td><td>profibus/-</td>
 <td>Bugfix in ExtUserPrmDataConst.</td><td>cs</td></tr>
+<tr><td>09-FEB-2007</td><td>/.</td>
+<td>Release 4.3.0-1.</td><td>cs</td></tr>
 <tr><td>09-FEB-2007</td><td>profibus/-</td>
 <td>Bugfix in Ext_User_Prm_Data_Len.</td><td>cs</td></tr>
 <tr><td>07-FEB-2007</td><td>profibus/-</td>
 <td>Adapted I/O routines to work with new driver for Softing Profiboard. Incorporated driver API from Softing to work with new Softing driver. Added diagnostics infomation to pwr_sClass_Pb_DP_Slave-class.</td><td>rk</td></tr>
 <tr><td>06-FEB-2007</td><td>wb/wb</td>
 <td>Bugfix in volumereferences in loadfiles. Casted attributes wasn't always checked.</td><td>cs</td></tr>
-<tr><td>30-JAN-2007</td><td>xtt/web</td>
-<td>_opwin removed from homepage name. index.html set as defaultname.</td><td>cs</td></tr>
+<tr><td>30-JAN-2007</td><td>bcomp/bcomp</td>
+<td>New components for On/Off burner control, CompOnOffBurner and CompOnOffZone.</td><td>cs</td></tr>
 <tr><td>30-JAN-2007</td><td>java/web</td>
 <td>Button for Eventlog in operators menu added.</td><td>cs</td></tr>
 <tr><td>30-JAN-2007</td><td>java/jop</td>
 <td>Default background color in GeTextField changed from Inherit to lightgrey.</td><td>cs</td></tr>
-<tr><td>30-JAN-2007</td><td>src/init</td>
-<td>Process rt_webmonelog (web eventlog server) added to startup.</td><td>cs</td></tr>
-<tr><td>30-JAN-2007</td><td>bcomp/bcomp</td>
-<td>New components for On/Off burner control, CompOnOffBurner and CompOnOffZone.</td><td>cs</td></tr>
 <tr><td>30-JAN-2007</td><td>xtt/web</td>
 <td>Possibility to configure which objectgraph jar-files that should be loaded (BaseComponent or ABB).</td><td>cs</td></tr>
+<tr><td>30-JAN-2007</td><td>src/init</td>
+<td>Process rt_webmonelog (web eventlog server) added to startup.</td><td>cs</td></tr>
+<tr><td>30-JAN-2007</td><td>xtt/web</td>
+<td>_opwin removed from homepage name. index.html set as defaultname.</td><td>cs</td></tr>
 <tr><td>30-JAN-2007</td><td>src/wbl</td>
 <td>Attribute LoadArchives added to WebHandler with new type WebLoadArchiveMask.</td><td>cs</td></tr>
 <tr><td>29-JAN-2007</td><td>java/web</td>
 <td>Bugfix in dynamic HostObject in web interface.</td><td>cs</td></tr>
 <tr><td>25-JAN-2007</td><td>xtt/ev</td>
 <td>Problem with double appearence of alarm when communication is bad fixed.</td><td>cs</td></tr>
-<tr><td>24-JAN-2007</td><td>src/io</td>
-<td>Check at io startup if multiple signals are connected to the same channel.</td><td>cs</td></tr>
-<tr><td>24-JAN-2007</td><td>src/wbl</td>
-<td>Attribute BuildCmd moved/added to Application and PlcProcess.</td><td>cs</td></tr>
 <tr><td>24-JAN-2007</td><td>wb/wtt</td>
 <td>Application build method for Application and PlcProcess objects. </td><td>cs</td></tr>
+<tr><td>24-JAN-2007</td><td>src/wbl</td>
+<td>Attribute BuildCmd moved/added to Application and PlcProcess.</td><td>cs</td></tr>
+<tr><td>24-JAN-2007</td><td>src/io</td>
+<td>Check at io startup if multiple signals are connected to the same channel.</td><td>cs</td></tr>
 <tr><td>24-JAN-2007</td><td>wb/plc</td>
 <td>'Create Object' added to the Plc Editor popupmenu.</td><td>cs</td></tr>
 <tr><td>24-JAN-2007</td><td>wb/wb</td>
 <td>Click time increated for MB2 (create object) in wtt.</td><td>cs</td></tr>
 <tr><td>23-JAN-2007</td><td>wb/wb</td>
-<td>Bugfix in trace attribute for GetIpToA.</td><td>cs</td></tr>
-<tr><td>23-JAN-2007</td><td>wb/wb</td>
 <td>Connect methods for GetATv, StoAtv, CStoATv, GetDTv etc added.</td><td>cs</td></tr>
+<tr><td>23-JAN-2007</td><td>wb/wb</td>
+<td>Bugfix in trace attribute for GetIpToA.</td><td>cs</td></tr>
 <tr><td>23-JAN-2007</td><td>xtt/xtt</td>
 <td>Bugfix in remtrans table. If multicast object found, object was not displayed. </td><td>cs</td></tr>
 <tr><td>17-JAN-2007</td><td>xtt/ge</td>
 <td>Property EscapeStore for dynamic type ValueInput added.</td><td>cs</td></tr>
 <tr><td>16-JAN-2007</td><td>src/trace</td>
 <td>Mouse Scroll events added.</td><td>cs</td></tr>
-<tr><td>16-JAN-2007</td><td>xtt/xtt</td>
-<td>Toolbar with icons for the methods of the selected object added.</td><td>cs</td></tr>
 <tr><td>16-JAN-2007</td><td>wb/plc</td>
 <td>Mouse Scroll events added.</td><td>cs</td></tr>
+<tr><td>16-JAN-2007</td><td>xtt/xtt</td>
+<td>Toolbar with icons for the methods of the selected object added.</td><td>cs</td></tr>
 <tr><td>15-JAN-2007</td><td>xtt/curve</td>
 <td>Scroll and zoom with arrow keys and mouse wheel. Scroll buttons in tools.  </td><td>cs</td></tr>
-<tr><td>12-JAN-2007</td><td>xtt/xtt</td>
-<td>Nodename displayed i Xtt title.</td><td>cs</td></tr>
-<tr><td>12-JAN-2007</td><td>src/trace</td>
-<td>Gtk version of rt_trace. Navigator window inserted in main window.</td><td>cs</td></tr>
-<tr><td>12-JAN-2007</td><td>xtt/xtt</td>
-<td>Font size in alarmtexts in operator window can be changed.</td><td>cs</td></tr>
 <tr><td>12-JAN-2007</td><td>wb/wb</td>
 <td>Gtk version of wb.</td><td>cs</td></tr>
 <tr><td>12-JAN-2007</td><td>xtt/xtt</td>
-<td>New syntax for function key definition file (gtk version).</td><td>cs</td></tr>
+<td>Font size in alarmtexts in operator window can be changed.</td><td>cs</td></tr>
+<tr><td>12-JAN-2007</td><td>src/trace</td>
+<td>Gtk version of rt_trace. Navigator window inserted in main window.</td><td>cs</td></tr>
+<tr><td>12-JAN-2007</td><td>xtt/xtt</td>
+<td>Nodename displayed i Xtt title.</td><td>cs</td></tr>
+<tr><td>12-JAN-2007</td><td>xtt/xtt</td>
+<td>Gtk version of xtt.</td><td>cs</td></tr>
 <tr><td>12-JAN-2007</td><td>xtt/ge</td>
 <td>Fileview for import of pwg and image files.</td><td>cs</td></tr>
 <tr><td>12-JAN-2007</td><td>xtt/xtt</td>
-<td>Gtk version of xtt.</td><td>cs</td></tr>
+<td>New syntax for function key definition file (gtk version).</td><td>cs</td></tr>
 <tr><td>10-OCT-2006</td><td>wb/pkg</td>
 <td>Support for bootnodes added, i.e. copying of package to other  nodes than the actual process or operator station.</td><td>cs</td></tr>
-<tr><td>05-SEP-2006</td><td>src/rt_tmon</td>
-<td>Established new callback function for glibc malloc memory checks.</td><td>rk</td></tr>
-<tr><td>05-SEP-2006</td><td>src/rt_qmon</td>
-<td>Wait a while for correct scheduler to be set before starting threads.</td><td>rk</td></tr>
 <tr><td>05-SEP-2006</td><td>src/plc</td>
 <td>Wait for all threads to set its priority before changing real and effective user id.</td><td>rk</td></tr>
+<tr><td>05-SEP-2006</td><td>src/rt_qmon</td>
+<td>Wait a while for correct scheduler to be set before starting threads.</td><td>rk</td></tr>
+<tr><td>05-SEP-2006</td><td>src/rt_tmon</td>
+<td>Established new callback function for glibc malloc memory checks.</td><td>rk</td></tr>
 <tr><td>30-AUG-2006</td><td>src/conv</td>
 <td>Attribute changed from enum to mask or v.v. was not converted.</td><td>cs</td></tr>
 <tr><td>22-AUG-2006</td><td>wb/wb</td>
@@ -135,10 +177,10 @@
 <td>Byte order dependency added for PRM data in profibus configurator.</td><td>cs</td></tr>
 <tr><td>20-JUL-2006</td><td>src/init</td>
 <td>Try with smaller posix message queue if system does not support big queues.</td><td>rk</td></tr>
-<tr><td>13-JUL-2006</td><td>src/init</td>
-<td>Volume versioncheck for volref removed if volume is not yet loaded.</td><td>rk</td></tr>
 <tr><td>13-JUL-2006</td><td>src/rt</td>
 <td>Bugfix in classcache for large classes.</td><td>rk</td></tr>
+<tr><td>13-JUL-2006</td><td>src/init</td>
+<td>Volume versioncheck for volref removed if volume is not yet loaded.</td><td>rk</td></tr>
 <tr><td>12-JUL-2006</td><td>abb/-</td>
 <td>ABB_ACS800_Slave: IORack bit was missing.</td><td>cs</td></tr>
 <tr><td>11-JUL-2006</td><td>wb/utl</td>
@@ -147,66 +189,66 @@
 <td>Bugfix in GetSp: short string could cause compile problems. </td><td>cs</td></tr>
 <tr><td>30-JUN-2006</td><td>src/wbl</td>
 <td>Listdescriptor for channellist adapted to V4.x.</td><td>cs</td></tr>
-<tr><td>29-JUN-2006</td><td>xtt/ge</td>
-<td>Format for Time and DeltaTime in table added.</td><td>cs</td></tr>
 <tr><td>29-JUN-2006</td><td>wb/plc</td>
 <td>Bugfix: CStoIp, StoIp, StoAToIp and CStoAToIp with In-input not connected, did not fetch the supplied value.</td><td>cs</td></tr>
-<tr><td>28-JUN-2006</td><td>xtt/ge</td>
-<td>New Value, ValueInput and Button subgraphs with Right and Center adjustment.</td><td>cs</td></tr>
+<tr><td>29-JUN-2006</td><td>xtt/ge</td>
+<td>Format for Time and DeltaTime in table added.</td><td>cs</td></tr>
 <tr><td>28-JUN-2006</td><td>xtt/glow</td>
 <td>Adjustment property (Left/Right/Center) added to annotations and table object.</td><td>cs</td></tr>
+<tr><td>28-JUN-2006</td><td>xtt/ge</td>
+<td>New Value, ValueInput and Button subgraphs with Right and Center adjustment.</td><td>cs</td></tr>
 <tr><td>27-JUN-2006</td><td>bcomp/bcomp</td>
 <td>Hysteresis in object graph for BaseSensor and subclasses displayed wrong value.</td><td>cs</td></tr>
-<tr><td>15-JUN-2006</td><td>wb/plc</td>
-<td>Search string didn't search in AttrRef attributes.</td><td>cs</td></tr>
 <tr><td>15-JUN-2006</td><td>xtt/xtt</td>
 <td>Object attributes channels and signals displayed in Device table.</td><td>cs</td></tr>
+<tr><td>15-JUN-2006</td><td>wb/plc</td>
+<td>Search string didn't search in AttrRef attributes.</td><td>cs</td></tr>
 <tr><td>07-JUN-2006</td><td>wb/wb</td>
 <td>Bugfix in wb_name, segment(0) returned invalid name for root objects.</td><td>cs</td></tr>
-<tr><td>30-MAY-2006</td><td>bcomp/bcomp</td>
-<td>Local mode added to CompModeDM and BaseMValve.</td><td>cs</td></tr>
 <tr><td>30-MAY-2006</td><td>wb/wtt</td>
 <td>Bugfix: change text without selecting any text object caused segfault.</td><td>cs</td></tr>
 <tr><td>30-MAY-2006</td><td>wb/wb</td>
 <td>UpdateClasses also converts the input and output masks in function objects.</td><td>cs</td></tr>
+<tr><td>30-MAY-2006</td><td>bcomp/bcomp</td>
+<td>Local mode added to CompModeDM and BaseMValve.</td><td>cs</td></tr>
 <tr><td>24-MAY-2006</td><td>wb/wtt</td>
 <td>Bugfix in classeditor. Change of classname caused unidentified class of the template object of the class.</td><td>cs</td></tr>
-<tr><td>24-MAY-2006</td><td>wb/wb</td>
-<td>StructName in ObjBodyDef inserted in PostCreate method.</td><td>cs</td></tr>
 <tr><td>24-MAY-2006</td><td>xtt/ge</td>
 <td>Property for selected cell color in GrowTable.</td><td>cs</td></tr>
+<tr><td>24-MAY-2006</td><td>wb/wb</td>
+<td>StructName in ObjBodyDef inserted in PostCreate method.</td><td>cs</td></tr>
 <tr><td>23-MAY-2006</td><td>src/pwrb</td>
 <td>New class GetDatap added, to fetch datainputs in template plc.</td><td>cs</td></tr>
-<tr><td>22-MAY-2006</td><td>wb/wtt</td>
-<td>Update Class added in menu, and new commands: 'update classes' and 'check classes'.</td><td>cs</td></tr>
 <tr><td>22-MAY-2006</td><td>xtt/ge</td>
 <td>Bugfix for $user attributes. Scan function for dynamics wasn't called. </td><td>cs</td></tr>
 <tr><td>22-MAY-2006</td><td>bcomp/bcomp</td>
 <td>New classes CompPID and CompModePID: PID controller divided in main object and function object.</td><td>cs</td></tr>
+<tr><td>22-MAY-2006</td><td>wb/wtt</td>
+<td>Update Class added in menu, and new commands: 'update classes' and 'check classes'.</td><td>cs</td></tr>
 <tr><td>19-MAY-2006</td><td>wb/wb</td>
 <td>Update of instance objects when a class is modified (without reload).</td><td>lw</td></tr>
-<tr><td>16-MAY-2006</td><td>xtt/ge</td>
-<td>Object instances can be used in graphs in Window and Folder objects.</td><td>cs</td></tr>
 <tr><td>16-MAY-2006</td><td>src/wbl</td>
 <td>Attribute ManMode added to Mode class, to avoid code in object graph.</td><td>cs</td></tr>
+<tr><td>16-MAY-2006</td><td>xtt/ge</td>
+<td>Possibility to use local database in DigLowColor, ToggleDig, Slider insensitiv, and Invisible.</td><td>cs</td></tr>
+<tr><td>16-MAY-2006</td><td>xtt/ge</td>
+<td>Object instances can be used in graphs in Window and Folder objects.</td><td>cs</td></tr>
 <tr><td>16-MAY-2006</td><td>xtt/glow</td>
 <td>Owner added to GrowWindow and GrowFolder.</td><td>cs</td></tr>
 <tr><td>16-MAY-2006</td><td>xtt/ge</td>
 <td>Bit type added in Invisible to check visibility on bits in a bitmap.</td><td>cs</td></tr>
-<tr><td>16-MAY-2006</td><td>xtt/ge</td>
-<td>Possibility to use local database in DigLowColor, ToggleDig, Slider insensitiv, and Invisible.</td><td>cs</td></tr>
 <tr><td>12-MAY-2006</td><td>src/rt</td>
 <td>Conversion between different versions av classes handles conversion from Objid to AttrRef and from AttrRef to Objid.</td><td>cs</td></tr>
 <tr><td>11-MAY-2006</td><td>xtt/ge</td>
 <td>Bugfix in Ge Open window, null filename could cause empty list.</td><td>cs</td></tr>
-<tr><td>11-MAY-2006</td><td>src/wbl</td>
-<td>Possibility to freeze dbs versions, i.e. minor changes can be made without version mismatch.</td><td>cs</td></tr>
 <tr><td>11-MAY-2006</td><td>wb/wtt</td>
 <td>Build Node window is not displayed if there is only one configured  node for the current volume. Submenu on Build removed.</td><td>cs</td></tr>
-<tr><td>09-MAY-2006</td><td>bcomp/bcomp</td>
-<td>Attribute DisableAlarm added to CompLimit to make it possible to use the limit supervision in BaseSensor without alarm.</td><td>cs</td></tr>
+<tr><td>11-MAY-2006</td><td>src/wbl</td>
+<td>Possibility to freeze dbs versions, i.e. minor changes can be made without version mismatch.</td><td>cs</td></tr>
 <tr><td>09-MAY-2006</td><td>profibus/-</td>
 <td>Added some commentation. Fixed bug in pb_ai and pb_di. 3-byte input where not properly aligned when byte swapping.</td><td>cj</td></tr>
+<tr><td>09-MAY-2006</td><td>bcomp/bcomp</td>
+<td>Attribute DisableAlarm added to CompLimit to make it possible to use the limit supervision in BaseSensor without alarm.</td><td>cs</td></tr>
 <tr><td>08-MAY-2006</td><td>wb/wtt</td>
 <td>References in superclass was not displayed in the navigator when option Object Reference or Attribute Reference was selected.</td><td>cs</td></tr>
 <tr><td>05-MAY-2006</td><td>wb/wtt</td>
@@ -221,22 +263,22 @@
 <td>Bugfix in dataarithm compilation, space at end of line could cause error.</td><td>cs</td></tr>
 <tr><td>26-APR-2006</td><td>wb/plc</td>
 <td>Bugfix in GetData compilation, error when referenced parameter was a type (not a class) not handled.</td><td>cs</td></tr>
+<tr><td>31-MAR-2006</td><td>xtt/glow</td>
+<td>Bugfix in annotation input. Insert of new characters might cause segmentation fault.</td><td>cs</td></tr>
 <tr><td>31-MAR-2006</td><td>wb/wtt</td>
 <td>Build methods added. 'Compile', 'create loadfile' and 'create bootfile' replaced by 'build object', 'build volume' and 'build node'. 'build object', 'build volume' and 'build node' also available as wtt commands.</td><td>cs</td></tr>
 <tr><td>31-MAR-2006</td><td>src/pwrs</td>
 <td>Modified attribute added to RootVolume, SubVolume and SharedVolume.</td><td>cs</td></tr>
-<tr><td>31-MAR-2006</td><td>xtt/glow</td>
-<td>Bugfix in annotation input. Insert of new characters might cause segmentation fault.</td><td>cs</td></tr>
 <tr><td>31-MAR-2006</td><td>wb/wtt</td>
 <td>Copy with keep references added to wtt menu.</td><td>cs</td></tr>
 <tr><td>31-MAR-2006</td><td>wb/wtt</td>
 <td>Configuration wizard started when entering an empty directoryvolume.</td><td>cs</td></tr>
 <tr><td>17-MAR-2006</td><td>src/qcom</td>
-<td>Changed interface to qcom_Put. Added attributes msg_id and prio in qcom_sPut structure.</td><td>rk</td></tr>
-<tr><td>17-MAR-2006</td><td>src/qcom</td>
 <td>Replaces old unsent subscriptions with new fresh ones.</td><td>rk</td></tr>
 <tr><td>17-MAR-2006</td><td>src/rt_tmon</td>
 <td>Cleaning (zero-ing) of timed out subscription data.</td><td>rk</td></tr>
+<tr><td>17-MAR-2006</td><td>src/qcom</td>
+<td>Changed interface to qcom_Put. Added attributes msg_id and prio in qcom_sPut structure.</td><td>rk</td></tr>
 <tr><td>07-MAR-2006</td><td>xtt/gedyn</td>
 <td>Subscription for Table (select array) and AnalogColor was not always unreferenced.</td><td>cs</td></tr>
 <tr><td>27-FEB-2006</td><td>xtt/xtt</td>
@@ -247,24 +289,24 @@
 <td>Check before creating a toplevel object if class is a valid in the current window.</td><td>cs</td></tr>
 <tr><td>23-FEB-2006</td><td>wb/wnav</td>
 <td>New wizard for configuration of directory volume.</td><td>cs</td></tr>
-<tr><td>22-FEB-2006</td><td>src/convert</td>
-<td>Bookmark inserted for every attribute in class xtthelp.</td><td>cs</td></tr>
 <tr><td>22-FEB-2006</td><td>src/xtthelp</td>
 <td>Bugfix, bookmark in xtthelp was case sensitive.</td><td>cs</td></tr>
-<tr><td>21-FEB-2006</td><td>wb/wnav</td>
-<td>Popupmenu for object with DevBody only could not be opened.</td><td>cs</td></tr>
+<tr><td>22-FEB-2006</td><td>src/convert</td>
+<td>Bookmark inserted for every attribute in class xtthelp.</td><td>cs</td></tr>
 <tr><td>21-FEB-2006</td><td>wb/ldh</td>
 <td>Bugfix. Unhandled exception in DeleteObject and DeleteTree if not in edit mode.</td><td>cs</td></tr>
+<tr><td>21-FEB-2006</td><td>wb/wnav</td>
+<td>Popupmenu for object with DevBody only could not be opened.</td><td>cs</td></tr>
 <tr><td>20-FEB-2006</td><td>src/script</td>
 <td>'delete' statement added to remove external variables.</td><td>cs</td></tr>
-<tr><td>20-FEB-2006</td><td>wb/script</td>
-<td>New script functions SetAttribute, OpenGraph, CloseGraph,  SetSubwindow and CheckSystemGroup.</td><td>cs</td></tr>
 <tr><td>20-FEB-2006</td><td>wb/wnav</td>
 <td>New commands: open graph, delete graph, set subwindow and release subwindow.</td><td>cs</td></tr>
-<tr><td>20-FEB-2006</td><td>xtt/ge</td>
-<td>Connect to script extern variables in Value, Invisible, SetDig, ToggleDig, DigShift and OptionMenu.</td><td>cs</td></tr>
+<tr><td>20-FEB-2006</td><td>wb/script</td>
+<td>New script functions SetAttribute, OpenGraph, CloseGraph,  SetSubwindow and CheckSystemGroup.</td><td>cs</td></tr>
 <tr><td>20-FEB-2006</td><td>src/script</td>
 <td>'#' alternative to '!' for comment in script.</td><td>cs</td></tr>
+<tr><td>20-FEB-2006</td><td>xtt/ge</td>
+<td>Connect to script extern variables in Value, Invisible, SetDig, ToggleDig, DigShift and OptionMenu.</td><td>cs</td></tr>
 <tr><td>19-FEB-2006</td><td>wb/wnav</td>
 <td>WGe, new class to open Ge graphs in development environment.</td><td>cs</td></tr>
 <tr><td>19-FEB-2006</td><td>xtt/gedyn</td>
